nodejs project comit

--- a/src/index.html
+++ b/src/index.html
@@ -64,30 +64,30 @@
           <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="form-group">
               <input type="text" name="firstname" id="first_name" class="form-control input-sm"
-                placeholder="First Name" value="">
+                placeholder="First Name" value="" required>
             </div>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="form-group">
-              <input type="text" name="lastname" id="last_name" class="form-control input-sm" placeholder="Last Name"value="">
+              <input type="text" name="lastname" id="last_name" class="form-control input-sm" placeholder="Last Name"value="" required>
             </div>
           </div>
         </div>
 
         <div class="form-group p-3">
-          <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address" value="">
+          <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address" value="" required>
         </div>
 
         <div class="row p-3">
           <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="form-group">
-              <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" value="">
+              <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password" value="" required>
             </div>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-6">
             <div class="form-group ">
               <input type="password" name="cnpassword" id="password_confirmation" class="form-control input-sm"
-                placeholder="Confirm Password" value="">
+                placeholder="Confirm Password" value="" required>
             </div>
           </div>
         </div>
@@ -107,7 +107,7 @@
           <div class="col-xs-10 col-sm-10 col-md-10">
             <div class="form-group ">
               <input type="text" name="txtEmpPhone" id="txtEmpPhone" class="form-control input-sm"
-                placeholder="Phone Number" value="">
+                placeholder="Phone Number" value="" required>
             </div>
           </div>
         </div>
@@ -121,11 +121,11 @@
         </div>
 
         <div class="form-group p-3 ">
-          <input type="text" name="answer" id="answer" class="form-control input-sm" placeholder="Answer">
+          <input type="text" name="answer" id="answer" class="form-control input-sm" placeholder="Answer" required>
         </div>
 
         <div class="row p-3">
-          <input type="submit" value="Register" class="btn btn-info btn-lg input-sm ">
+          <input type="submit" value="Register" class="btn btn-info btn-lg input-sm " required>
         </div>
       </form>
 
